--- a/tex/writeupLab4.tex
+++ b/tex/writeupLab4.tex
@@ -193,7 +193,7 @@ The ensuing figures plot the engineered feature values (NDAI, SD, CORR) spatiall
 \caption{Mapped CORR readings. Cloudy regions tend to be lighter, but not as strongly as in NDAI.}
 \end{figure}
 
-\section{Modeling} As shown in the EDA section, it is possible to separate cloudy and clear pixels based on the 3 engineered features. Density plots of the radiances do not display similar separations. This along with the random forests Gini importance cause us to focus on NDAI, SD, and CORR.
+\section{Modeling} As shown in the EDA section, it is possible to separate cloudy and clear pixels based on the 3 engineered features. Density plots of the radiances do not display similar separations. This along with the Gini importance from our random forests analysis cause us to focus on NDAI, SD, and CORR.
 
 \subsection{QDA/LDA}
 
