--- a/tex/writeupLab4.tex
+++ b/tex/writeupLab4.tex
@@ -326,24 +326,35 @@ For the random forest, as in all the other classifiers, we divided the three ima
 \minipage{0.2\textwidth}
   \includegraphics[width=\linewidth, height = 150pts]{AUC_12_folds.png}
 \endminipage\hfill
-\minipage{0.8\textwidth}%
+\minipage{0.8\textwidth}
   \includegraphics[width=\linewidth, height = 150pts]{ROC_fold_comparison.png}
 \endminipage
   \caption{ROC across all 12 folds of quadrants}\label{}
 \end{figure}
 
-We also trained on each image and tested on the remaining two. \\
+We also trained on each image and tested on the remaining two. The AUC values obtained:
+\begin{itemize}
+\item train 1 and 2, test 3: 0.8857
+\item train 2 and 3, test 1: 0.9757
+\item train 3 and 1, test 2: 0.9462
+\end{itemize}
 
+\begin{figure}[H]
 
-  \begin{figure}[H]
-\minipage{0.5\textwidth}
-\centering
-  \includegraphics[width=150pts, height = 80pts ]{AUC_images.png}
-\endminipage\hfill
-\minipage{0.5\textwidth}
-The AUC values for training on 2/3 of the images and testing on the remaining image is given to our left.  Since testing on image1 and image 2 performed well in comparison with testing on image 3, we include below the plots for misclassification only for image 1 and 3, and an example where the model performed better than the other.  
-\endminipage\hfill
+\minipage{0.3\textwidth}
+  \includegraphics[width=\linewidth, height = 150pts]{ROC_image8.pdf}
+\endminipage
+\caption{train 1 and 2, test 3}
+\minipage{0.3\textwidth}
+  \includegraphics[width=\linewidth, height = 150pts]{ROC_image1.pdf}
+\endminipage
+\caption{train 2 and 3, test 1}
+\minipage{0.3\textwidth}
+  \includegraphics[width=\linewidth, height = 150pts]{ROC_image2.pdf}
+\endminipage
+\caption{train 1 and 3, test 2}
 \end{figure}
+
 
 {\bf Where was the model performing poorly?}
 The images below show classification errors for models trained on 2 images and tested on the other, as noted above in the AUC table, these models unsurprisingly performed worse than training on 11/12 of the folds.  Nonetheless, they are a useful indication of where prediction errors occurred.  In general, when the training set included image 3, the model performed better.  Only when image 3 was not included did we get obtain an AUC value less than 90.   
